--- a/style.css
+++ b/style.css
@@ -63,6 +63,11 @@ section p {
   font-size: 20px;
   line-height: 2;
 }
+.profile-photo {
+  text-align: right;
+  margin: 20px 0;
+  height: 300px;
+}
 .profile-photo img {
   width: 180px;
   height: 180px;
@@ -71,4 +76,5 @@ section p {
   border: 4px solid #fff; 
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
 }
+
 
